--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "ejs": "^3.1.9",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
+    "mongoose": "^8.3.5",
+    "node-fs": "^0.1.7",
     "typo-js": "^1.2.4"
   },
   "name": "essaygrader",
